tests/success/switch_all_noreturn.bz
function main()
{
	switch (0)
	{
		else => unreachable,
	}
}
