tests/error/builtin_function_error.bz
function main()
{
	let i = 0;
	let u = 0u;
	__builtin_slice_from_ptrs(&i, &u);
}
